--- a/style.css
+++ b/style.css
@@ -793,6 +793,14 @@ body {
   display: flex;
   top: 0px;
 }
+@media (max-width: 768px) {
+  .services .modal.active {
+    top: 8px;
+    bottom: 8px;
+    overflow: scroll;
+    height: auto;
+  }
+}
 .services .modal_first-service {
   grid-column: 1/7;
   display: flex;
